--- a/style/contact.css
+++ b/style/contact.css
@@ -109,7 +109,9 @@ button{
     border-radius: 30px;
     margin-top: 20px;  
     box-shadow: 0px 5px 15px 0px rgba(28,0,181,0.3);
+    cursor: pointer;
 }
+
 .contact-left h3{
     color: rgb(73, 189, 189);
     font-weight: 600;
